<resources>
    <string name="app_name">AOBenchmark</string>
    <string name="home">Home</string>
    <string name="start_benchmark">Start Apps Benchmark</string>
    <string name="history">Your Previous Scores</string>
    <string name="top_scores">Top Scores</string>
    <string name="user_profile">User Profile</string>
    <string name="your_account">Your Account</string>
    <string name="menu_welcome_msg">Welcome to the AO-Benchmark</string>
    <string name="benchmark_title">Home</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="sign_out">Sign Out</string>
    <string name="author_title">© All rights reserved to Alexandru Oprea</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="complete_fields">Please complete all the fields!</string>
    <string name="package_name">Package Name</string>
    <string name="file_size">File size</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="i_don_t_have_an_account_yet">I don\'t have an account yet.</string>
    <string name="invalid_email">The email is not valid</string>
    <string name="OK">OK</string>
    <string name="login_failed">Login Failed</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="authentication">Authentication</string>
    <string name="retrieve_user_info_failed">Could not retrieve user information</string>
    <string name="benchmark_test_failed">Perform benchmark tests failed</string>
    <string name="retrieve_online_scores_failed">Could not retrieve Top Scores</string>
    <string name="retrieve_local_scores_failed">Could not retrieve previous scores</string>
    <string name="contact_us">Contact</string>
    <string name="company_ao_services">Company: AO-Services</string>
    <string name="founder_alexandru_oprea">Founder: Alexandru Oprea</string>
    <string name="call_us">Call Us</string>
    <string name="email_us">Email Us</string>
    <string name="collaborate_with_us">Collaborate with Us</string>
    <string name="about_us">About Us</string>
    <string name="select_apps_msg">Please select at least one application</string>
    <string name="perform_tests">Perform Tests</string>
    <string name="your_score">Your Score</string>
    <string name="score">Score</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="runned_apps">Runned Apps</string>
    <string name="account_id">Account Id</string>
    <string name="device_model">This Device</string>
    <string name="device_performance">Device Performance</string>
    <string name="synthetic_tests">Start Synthetic Tests</string>
    <string name="synthetic_tests_title">Synthetic Tests</string>
    <string name="running_app">Running app</string>
    <string name="test_type">Test Type</string>
    <string name="spent_time">Spent Time [ms]</string>
    <string name="total_time">Total Time [ms]</string>
    <string name="battery_drain">Battery Drain</string>
    <string name="well_done">Well done!</string>
    <string name="scores">Scores</string>
    <string name="real_apps_scores">Real-World Apps Scores</string>
    <string name="synthetic_tests_scores">Synthetic Tests Scores</string>
</resources>
