<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_apps_benchmark">

    <fragment
        android:id="@+id/nav_apps_benchmark"
        android:name="ro.ao.benchmark.ui.main.benchmark.app_tests.AppSelectorFragment"
        android:label="@string/benchmark_title"
        tools:layout="@layout/fragment_benchmark">
        <action
            android:id="@+id/nav_to_tests"
            app:destination="@id/nav_tests" />
    </fragment>

    <fragment
        android:id="@+id/nav_global_ranking"
        android:name="ro.ao.benchmark.ui.main.global_ranking.GlobalRankingFragment"
        android:label="@string/top_scores"
        tools:layout="@layout/fragment_global_ranking" />

    <fragment
        android:id="@+id/nav_local_ranking"
        android:name="ro.ao.benchmark.ui.main.local_ranking.LocalRankingFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_local_ranking" />
    <fragment
        android:id="@+id/nav_account"
        android:name="ro.ao.benchmark.ui.main.account.AccountFragment"
        android:label="@string/your_account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/nav_login"
        android:name="ro.ao.benchmark.ui.authentication.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/nav_register"
        android:name="ro.ao.benchmark.ui.authentication.register.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register" />
    <activity
        android:id="@+id/nav_splash"
        android:name="ro.ao.benchmark.ui.splash_screen.SplashScreenActivity"
        android:label="@string/app_name"
        tools:layout="@layout/activity_splash_screen" />
    <activity
        android:id="@+id/nav_authentication"
        android:name="ro.ao.benchmark.ui.authentication.AuthenticationActivity"
        android:label="@string/authentication"
        tools:layout="@layout/activity_authentication" />
    <fragment
        android:id="@+id/nav_contact"
        android:name="ro.ao.benchmark.ui.main.about.ContactFragment"
        android:label="@string/contact_us"
        tools:layout="@layout/fragment_contact" />
    <fragment
        android:id="@+id/nav_tests"
        android:name="ro.ao.benchmark.ui.main.benchmark.app_tests.AppsTestingFragment"
        android:label="@string/perform_tests">
        <argument
            android:name="packageNames"
            app:argType="string[]" />
    </fragment>
    <fragment
        android:id="@+id/nav_synthetic_tests"
        android:name="ro.ao.benchmark.ui.main.benchmark.synthetic_tests.SyntheticTestsFragment"
        android:label="@string/synthetic_tests_title"
        tools:layout="@layout/fragment_synthetic_tests" />
</navigation>